# neddata

./: .envrc  .gitattributes  dev-requirements.txt  justfile  ppyproject.toml  pyproject.toml  requirements.txt
.github/workflows_inactive/: codecov.yml
src/neddata/: __init__.py  cli.py  datamodel.py  env.py  main.py
src/neddata/_tools/: assert_editable.py  register.py
src/neddata/abbey/: catalog.py  load.py  pooch_registry.txt
src/neddata/abbey/Benchmark/: Bench_Ben-Cist1.py  Bench_Ben-Cist1.xlsx  RAG_Ben-Cist_from_CompleteKDB.json  RAG_Ben-Cist_from_CompleteKDB_Gutachten.xlsx
src/neddata/abbey/KDB/: Database6.accdb  KDB_Ben-Cist-github.csv  KDB_Complete.csv  KDB_Complete.xlsx  KDB_Complete_2.csv  KDB_Complete_2.py  KDB_Complete_2.xlsx
src/neddata/abbey/KDB/KDB_Complete_RAGI/: chunks.json  chunks_metas.json  chunks_schemas.json  chunks_tokenized.json  rag_chunks.json
src/neddata/abbey/Regests/: 1_text_header_sublemma_Identifizierungen.csv  2_Ben-Cist.xlsx  2_Ben-Cist_Identifizierungen.UNIQUE.py  2_Ben-Cist_Identifizierungen.UNIQUE.xlsx  2_Ben-Cist_Identifizierungen.csv  2_Ben-Cist_Identifizierungen.xlsx
src/neddata/abbey/Resources/: annotation_guidelines.md
src/neddata/utils/: __init__.py  fileio.py  pd.py  stdlib.py
